tests/parse/error/list_unclosed_right.err
Error: Unclosed delimiter (
   ╭─[tests/parse/error/list_unclosed_right.scm:1:6]
   │
 1 │ (3132
   · ┬    ┬  
   · ╰─────── Unclosed delimiter (
   ·      │  
   ·      ╰── Must be closed before this end of file
───╯
Error: Unexpected end of input, expected <expression>
   ╭─[tests/parse/error/list_unclosed_right.scm:1:6]
   │
 1 │ (3132
   ·      ┬  
   ·      ╰── Unexpected end of file
───╯
